# demo_tauri_browser

./: .gitignore  README.md  index.html  nav.html  package.json
src/: App.css  App.tsx  NavBar.tsx  empty.tsx  nav.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  menu.rs  navbar.rs  state.rs  tabs.rs  update.rs
src-tauri/src/commands/: back.rs  forward.rs  mod.rs  visit.rs
