[package]
name = "demo-tauri-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "demo_tauri_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0-beta", features = ["unstable"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26.3", features = ["derive"] }
nanoid = "0.4.0"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
